tests/machine/x/java/list_nested_assign.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramslist_nested_assign4282951668/001/Main.java:5: error: cannot find symbol
	matrix.get(1).set(0, 5);
	             ^
  symbol:   method set(int,int)
  location: class Object
/tmp/TestCompileValidProgramslist_nested_assign4282951668/001/Main.java:6: error: cannot find symbol
	System.out.println(matrix.get(1).get(0));
	                                ^
  symbol:   method get(int)
  location: class Object
2 errors


  1| var matrix = [[1,2],[3,4]]
  2| matrix[1][0] = 5
